dsl/tests/apply_fail.meja
let d : _ = fun (f : 'b -> 'b, x : unit) => {
  f 15;
  f x;
};
